[package]
name = "phanpcap"
version = "0.1.0"
edition = "2021"
authors = ["wesam adel <github.com/nizzard0094>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dndx/phantun"
readme = "README.md"
description = """
client port of phantun for windows using pcap
Transforms UDP stream into (fake) TCP streams that can go through
Layer 3 & Layer 4 (NAPT) firewalls/NATs.
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
pnet = "0.33.0"
num_cpus = "1.15.0"
flume = "0.10.14"
pcap = {version = "1.1.0"}
socket2 = { version="0.5.3", features = ["all"] }
net-route = "0.2.5"
arp-toolkit = "0.3.1"
bytes = "1.4.0"
internet-checksum = "0.2.1"
log = "0.4.19"
rand = { version = "0.8.5", features = ["small_rng"] }
clap = { version = "4.3.8", features = ["cargo"] }
tokio-util = "0.7.8"
pretty_env_logger = "0.5.0"
dhcproto = "0.9.0"

